compiler/testData/diagnostics/tests/subtyping/kt2744.fir.kt
class X : <!OTHER_ERROR!>S<!>

fun f(l: List<X>) {}
